<resources>
    <string name="app_name">Club Box</string>
    <string name="title_activity_acceuil">Acceuil</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="email">Email</string>
    <string name="descriptionFbIcon">Icone Facebook connect</string>
    <string name="descriptionGoogleIcon">Icone Google connect</string>
    <string name="prochain_match">Prochain match</string>
    <string name="equipe_a">équipe A</string>
    <string name="equipe_b">équipe B</string>
    <string name="score_a">score a</string>
    <string name="score_b">score b</string>
    <string name="dernier_match">Dernier match</string>
    <string name="equipe_a_last">équipe A</string>
    <string name="equipe_b_last">équipe B</string>
    <string name="score_a_last">score a</string>
    <string name="score_b_last">score b</string>
    <string name="lastNews">Dernières actualités</string>
    <string name="title_action_bar">Club box</string>
    <string name="messages">Messages</string>
    <string name="accueil">Accueil</string>
    <string name="resultat">Résultats</string>
    <string name="classement">Classement</string>
    <string name="event">Actualités</string>
    <string name="GestionProfil">Gestion du Profil</string>
    <string name="FermerMenu">Fermer le menu</string>
    <string name="menu">MENU</string>
    <string name="eventTitle">Titre de l\'évènement</string>
    <string name="eventDate">Date de l\'évènement</string>
    <string name="eventDescription">Description de l\'évènement</string>
    <string name="absent">Absent</string>
    <string name="present">Présent</string>
    <string name="aVoir">A voir</string>
    <string name="Convocations">Convocations</string>
    <string name="Evènements">Evènements</string>
    <string name="Evènement">Evènement</string>
    <string name="Match">Match</string>
    <string name="match_du_date">Match du ..DATE..</string>
    <string name="score">score</string>
    <string name="Buteurs">Buteurs</string>
    <string name="Résumé">Résumé</string>
    <string name="RésuméContent">Ici sera le résumé... blablabla</string>
    <string name="Résultats">Résultats</string>
    <string name="Messages">Messages</string>
    <string name="texte">Texte</string>
    <string name="Profil">Profil</string>
    <string name="pr_sent">Présent</string>
    <string name="LieuMatch">matchPlace</string>
</resources>