<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center_vertical"
                android:background="@drawable/h_foncee_2"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <ImageButton
                    android:id="@+id/navButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/h_foncee_2"
                    android:src="@drawable/menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/soccer"
                    android:drawablePadding="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/title_action_bar"
                    android:textColor="#fff"
                    android:textSize="30sp" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/h_claire_2"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/prochain_match"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:paddingTop="5dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/timer" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="90'"
                            android:textColor="#000"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/equipe_a"
                            android:id="@+id/equipe_a_next"
                            android:textColor="#000"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/equipe_b"
                            android:id="@+id/equipe_b_next"
                            android:textColor="#000"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/score_a"
                            android:id="@+id/score_a_next"
                            android:textColor="#000"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/score_b"
                            android:id="@+id/score_b_next"
                            android:textColor="#000"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/h_foncee_2"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/dernier_match"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/equipe_a_last"
                            android:textColor="#000"
                            android:id="@+id/equipe_a_last" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/equipe_b_last"
                            android:textColor="#000"
                            android:id="@+id/equipe_b_last" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/score_a_last"
                            android:textColor="#000"
                            android:id="@+id/score_a_last" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/score_b_last"
                            android:textColor="#000"
                            android:id="@+id/score_b_last" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/h_claire_2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:text="@string/lastNews"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <com.clubbox.clubbox.views.NewsListView
                    android:id="@+id/listViewNews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />

            </LinearLayout>
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/menuLeft"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/h_foncee_2"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.11"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/menu"
            android:textColor="#fff"
            android:textSize="30sp" />

        <Button
            android:id="@+id/nav_accueil"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.11"
            android:background="@drawable/h_claire_2"
            android:drawableLeft="@drawable/home"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/accueil"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/nav_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.11"
            android:background="@drawable/h_foncee_2"
            android:drawableLeft="@drawable/soccer"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/resultat"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/nav_rank"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.11"
            android:background="@drawable/h_claire_2"
            android:drawableLeft="@drawable/trophy"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/classement"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/nav_messages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.11"
            android:background="@drawable/h_foncee_2"
            android:drawableLeft="@drawable/message_reply_text"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/messages"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/nav_convocations"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.11"
            android:background="@drawable/h_claire_2"
            android:drawableLeft="@drawable/calendar_check"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/Convocations"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/nav_profil"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.11"
            android:background="@drawable/h_foncee_2"
            android:drawableLeft="@drawable/account"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/GestionProfil"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/nav_close"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.11"
            android:background="@drawable/h_claire_2"
            android:drawableLeft="@drawable/close"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/FermerMenu"
            android:textColor="#fff"
            android:textSize="18sp" />


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>